22 November 2018: Wouter
	- With ./configure --with-pyunbound --with-pythonmodule
	  PYTHON_VERSION=3.6 or with 2.7 unbound can compile and unit tests
	  succeed for the python module.
	- pythonmod logs the python error and traceback on failure.
	- ignore debug python module for test in doxygen output.
	- review fixes for python module.
	- Fix #4209: Crash in libunbound when called from getdns.

21 November 2018: Wouter
	- Scrub NS records from NODATA responses as well.

20 November 2018: Wouter
	- Scrub NS records from NXDOMAIN responses to stop fragmentation
	  poisoning of the cache.
	- Add patch from Jan Vcelak for pythonmod,
	  add sockaddr_storage getters, add support for query callbacks,
	  allow raw address access via comm_reply and update API documentation.
	- Removed compile warnings in pythonmod sockaddr routines.

19 November 2018: Wouter
	- Support SO_REUSEPORT_LB in FreeBSD 12 with the so-reuseport: yes
	  option in unbound.conf.

6 November 2018: Ralph
	- Bugfix min-client-subnet-ipv6

25 October 2018: Ralph
	- Add min-client-subnet-ipv6 and min-client-subnet-ipv4 options.

25 October 2018: Wouter
	- Fix #4191: NXDOMAIN vs SERVFAIL during dns64 PTR query.
	- Fix #4190: Please create a "ANY" deny option, adds the option
	  deny-any: yes in unbound.conf.  This responds with an empty message
	  to queries of type ANY.
	- Fix #4141: More randomness to rrset-roundrobin.
	- Fix #4132: Openness/closeness of RANGE intervals in rpl files.
	- Fix #4126: RTT_band too low on VSAT links with 600+ms latency,
	  adds the option unknown-server-time-limit to unbound.conf that
	  can be increased to avoid the problem.
	- remade makefile dependencies.
	- Fix #4152: Logs shows wrong time when using log-time-ascii: yes.

24 October 2018: Ralph
	- Add markdel function to ECS slabhash.
	- Limit ECS scope returned to client to the scope used for caching.
	- Make lint like previous #4154 fix.

22 October 2018: Wouter